--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^5.11.0",
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-plugin-styled-components": "^5.12.1",
+    "gatsby-plugin-theme-switcher": "^1.0.0",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-json": "^4.11.0",
     "gatsby-transformer-sharp": "^4.11.0",
