--- a/Gatsby/package.json
+++ b/Gatsby/package.json
@@ -8,7 +8,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.11.1",
-    "gatsby-cli": "^4.13.0",
+    "gatsby-cli": "^4.12.1",
     "gatsby-plugin-gatsby-cloud": "^4.11.1",
     "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-manifest": "^4.11.1",
@@ -38,7 +38,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
